Refactor configuration files and add disk size variable for compute instances

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -1,18 +1,24 @@
 all:
-  vars:
-    # --- Bağlantı Ayarları ---
+  vars: 
     ansible_connection: ssh
     ansible_user: ubuntu
     ansible_ssh_private_key_file: /home/ubuntu/kafka-key.pem
     ansible_become: true
+    ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+    custom_log4j2: false
 
     ssl_enabled: true
     ssl_self_signed: true
+    regenerate_ca: true
+    regenerate_keystore_and_truststore: true
 
     sasl_protocol: scram
     sasl_mechanism: SCRAM-SHA-512
+    
+    kafka_controller_sasl_protocol: plain,scram
+    kafka_controller_sasl_mechanism: PLAIN
 
-    sasl_users:
+    sasl_scram_users:
       admin:
         principal: admin
         password: admin-secret-password
@@ -20,59 +26,72 @@ all:
         principal: client
         password: client-secret-password
 
+    sasl_plain_users:
+      admin:
+        principal: admin
+        password: admin-secret-password
+
     kafka_broker_sasl_user: admin
     kafka_controller_sasl_user: admin
     kafka_connect_sasl_user: admin
 
-    kafka_broker_listeners:
-      sasl_ssl:
-        name: SASL_SSL
+
+    kafka_broker_custom_listeners:
+      internal:
+        name: INTERNAL
         port: 9092
+        ssl_enabled: true
+        sasl_protocol: scram
 
-    kafka_broker_inter_broker_listener_name: sasl_ssl
-    kafka_broker_inter_broker_protocol_version: "4.1"
+
+    kafka_broker_inter_broker_listener_name: internal
 
 
-kafka_controller:
-  vars:
-    kafka_controller_sasl_protocol: plain
-    kafka_controller_sasl_mechanism: PLAIN
-
-    kafka_controller_listeners:
+    kafka_controller_custom_listeners:
       controller:
         name: CONTROLLER
         port: 9093
+        ssl_enabled: true
+        sasl_protocol: plain
 
     kafka_controller_inter_controller_listener_name: controller
-    kafka_controller_inter_controller_protocol_version: "4.1"
 
-    kafka_controller_quorum_voters: "1@10.0.1.210:9093,2@10.0.2.174:9093,3@10.0.3.97:9093"
+    kafka_controller_quorum_voters: "3001@ip-10-0-1-240.eu-central-1.compute.internal:9093,3002@ip-10-0-2-70.eu-central-1.compute.internal:9093,3003@ip-10-0-3-250.eu-central-1.compute.internal:9093"
 
+kafka_controller:
   hosts:
-    10.0.1.210:
-      kafka_controller_id: 1
-      node_id: 1
-    10.0.2.174:
-      kafka_controller_id: 2
-      node_id: 2
-    10.0.3.97:
-      kafka_controller_id: 3
-      node_id: 3
+    ip-10-0-1-240.eu-central-1.compute.internal:
+      ansible_host: 10.0.1.240
+      kafka_controller_id: 3001
+      node_id: 3001
+    ip-10-0-2-70.eu-central-1.compute.internal:
+      ansible_host: 10.0.2.70
+      kafka_controller_id: 3002
+      node_id: 3002
+    ip-10-0-3-250.eu-central-1.compute.internal:
+      ansible_host: 10.0.3.250
+      kafka_controller_id: 3003
+      node_id: 3003
 
 kafka_broker:
   hosts:
-    10.0.1.42:
-      kafka_broker_id: 1
-    10.0.1.224:
-      kafka_broker_id: 2
-    10.0.2.165:
-      kafka_broker_id: 3
-    10.0.2.80:
-      kafka_broker_id: 4
+    ip-10-0-1-7.eu-central-1.compute.internal:
+      ansible_host: 10.0.1.7
+      node_id: 1
+    ip-10-0-1-244.eu-central-1.compute.internal:
+      ansible_host: 10.0.1.244
+      node_id: 2
+    ip-10-0-2-185.eu-central-1.compute.internal:
+      ansible_host: 10.0.2.185
+      node_id: 3
+    ip-10-0-2-91.eu-central-1.compute.internal:
+      ansible_host: 10.0.2.91
+      node_id: 4
 
 kafka_connect:
   hosts:
-    10.0.1.19:
+    ip-10-0-1-80.eu-central-1.compute.internal:
+      ansible_host: 10.0.1.80
 
 zookeeper:
   hosts: {}
