Add JMX exporter configuration to hosts.yml

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -7,6 +7,8 @@ all:
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
     custom_log4j2: false
 
+    jmxexporter_enabled: true
+
     ssl_enabled: true
     ssl_self_signed: true
     regenerate_ca: true
