Add Kafka API requirements and initial connector setup logs
- Created requirements.txt for Kafka API with Flask and Confluent Kafka dependencies.
- Added detailed logs for Kafka Connect REST API interactions, including connector creation, configuration validation, and status checks.
- Documented the process of setting up a Datagen connector for generating test data.

--- a/5-kafka-connect-cluster-deployment/Dockerfile
+++ b/5-kafka-connect-cluster-deployment/Dockerfile
@@ -2,17 +2,15 @@ FROM confluentinc/cp-kafka-connect:8.1.0
 
 USER root
 
-# 1. JMX Exporter Setup
+# 1. JMX Exporter Setup (Burası Aynen Kalsın)
 RUN mkdir -p /opt/jmx-exporter && \
     curl -o /opt/jmx-exporter/jmx_prometheus_javaagent.jar \
     https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/0.20.0/jmx_prometheus_javaagent-0.20.0.jar && \
     curl -o /opt/jmx-exporter/config.yaml \
     https://raw.githubusercontent.com/confluentinc/jmx-monitoring-stacks/6.1.0-post/shared-assets/jmx-exporter/kafka_connect.yml
 
-# 2. HTTP Connector - JAR dosyalarını direkt indir
-RUN mkdir -p /usr/share/confluent-hub-components/kafka-connect-http && \
-    cd /usr/share/confluent-hub-components/kafka-connect-http && \
-    curl -O https://repo1.maven.org/maven2/com/github/castorm/kafka-connect-http/0.8.11/kafka-connect-http-0.8.11.jar && \
-    curl -O https://repo1.maven.org/maven2/com/github/castorm/kafka-connect-http-plugin/0.8.11/kafka-connect-http-plugin-0.8.11.jar
+# 2. Datagen Connector Kurulumu (HTTP yerine bunu kullanıyoruz)
+# Bu komut gerekli her şeyi otomatik indirir ve kurar.
+RUN confluent-hub install --no-prompt confluentinc/kafka-connect-datagen:0.6.0
 
 USER appuser
