--- a/3-observability/docker-compose.yml
+++ b/3-observability/docker-compose.yml
@@ -1,66 +1,48 @@
-global:
-  scrape_interval: 15s
-  evaluation_interval: 15s
+services:
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - /etc/prometheus/rules:/etc/prometheus/rules
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
 
-alerting:
-  alertmanagers:
-    - static_configs:
-        - targets:
-          - 'alertmanager:9093'
+  alertmanager:
+    image: prom/alertmanager:latest
+    container_name: alertmanager
+    ports:
+      - "9093:9093"
+    volumes:
+      - ./alertmanager/config.yml:/etc/alertmanager/config.yml
+    command:
+      - '--config.file=/etc/alertmanager/config.yml'
 
-rule_files:
-  - "/etc/prometheus/rules/alerts.yml"
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
 
-scrape_configs:
-  # 1. Prometheus
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090']
-
-  # 2. Node Exporter (Infrastructure)
-  - job_name: 'node_exporter'
-    static_configs:
-      - targets:
-        - '10.0.1.7:9100'   # Broker 1
-        - '10.0.1.244:9100' # Broker 2
-        - '10.0.2.185:9100' # Broker 3
-        - '10.0.2.91:9100'  # Broker 4
-        - '10.0.1.240:9100' # Controller 1
-        - '10.0.2.70:9100'  # Controller 2
-        - '10.0.3.250:9100' # Controller 3
-        - '10.0.1.80:9100'  # Kafka Connect
-
-  # 3. KAFKA CLUSTER 
-  - job_name: 'kafka'
-    static_configs:
-      # --- Brokers (Port 8080) ---
-      - targets:
-        - '10.0.1.7:8080'
-        - '10.0.1.244:8080'
-        - '10.0.2.185:8080'
-        - '10.0.2.91:8080'
-        labels:
-          role: 'broker'
-          env: 'production'
-
-      # --- Controllers (Port 8079) ---
-      - targets:
-        - '10.0.1.240:8079'
-        - '10.0.2.70:8079'
-        - '10.0.3.250:8079'
-        labels:
-          role: 'controller'
-          env: 'production'
-
-  # 4. Kafka Connect
-  - job_name: 'kafka-connect'
-    static_configs:
-      - targets:
-        - '10.0.1.80:8079'
-        labels:
-          role: 'connect'
-          env: 'production'
-
-  - job_name: 'kafka-exporter'
-    static_configs:
-      - targets: ['kafka-exporter:9308']
+  kafka-exporter:
+    image: danielqsj/kafka-exporter:latest
+    container_name: kafka-exporter
+    ports:
+      - "9308:9308"
+    command:
+      - --kafka.server=10.0.1.7:9092
+      - --kafka.server=10.0.1.244:9092
+      - --kafka.server=10.0.2.185:9092
+      - --kafka.server=10.0.2.91:9092
+      - --kafka.version=3.0.0
+    restart: always
