Update server.properties to enhance Kafka configuration with security and performance settings

--- a/2.Kafka-Cluster-Setup-and-Configuration/server.properties
+++ b/2.Kafka-Cluster-Setup-and-Configuration/server.properties
@@ -1,22 +1,87 @@
-curl -X POST http://10.0.1.80:8083/connectors \
-  -H "Content-Type: application/json" \
-  -d '{
-    "name": "datagen-users",
-    "config": {
-      "connector.class": "io.confluent.kafka.connect.datagen.DatagenConnector",
-      "kafka.topic": "topic-1",
-      "quickstart": "users",
-      "key.converter": "org.apache.kafka.connect.storage.StringConverter",
-      "value.converter": "org.apache.kafka.connect.json.JsonConverter",
-      "value.converter.schemas.enable": "false",
-      "max.interval": "1000",
-      "iterations": "1000000000",
-      "tasks.max": "1",
-
-      "bootstrap.servers": "ip-10-0-1-7.eu-central-1.compute.internal:9092",
-
-      "security.protocol": "SASL_SSL",
-      "sasl.mechanism": "SCRAM-SHA-512",
-      "sasl.jaas.config": "org.apache.kafka.common.security.scram.ScramLoginModule required username=\"admin\" password=\"admin-secret-password\";"
-    }
-  }' | jq
+# Maintained by Ansible
+advertised.listeners=INTERNAL://ip-10-0-1-7.eu-central-1.compute.internal:9092,BROKER://ip-10-0-1-7.eu-central-1.compute.internal:9091
+confluent.ansible.managed=true
+confluent.balancer.topic.replication.factor=3
+confluent.cluster.link.metadata.topic.replication.factor=3
+confluent.http.server.advertised.listeners=https://ip-10-0-1-7.eu-central-1.compute.internal:8090
+confluent.http.server.listeners=https://0.0.0.0:8090
+confluent.http.server.ssl.key.password=<password>
+confluent.http.server.ssl.keystore.location=/var/ssl/private/kafka_broker.keystore.jks
+confluent.http.server.ssl.keystore.password=<password>
+confluent.http.server.ssl.truststore.location=/var/ssl/private/kafka_broker.truststore.jks
+confluent.http.server.ssl.truststore.password=<password>
+confluent.license.topic=_confluent-command
+confluent.license.topic.replication.factor=3
+confluent.metadata.topic.replication.factor=3
+confluent.security.event.logger.exporter.kafka.topic.replicas=3
+confluent.support.customer.id=anonymous
+confluent.support.metrics.enable=true
+controller.listener.names=CONTROLLER
+controller.quorum.voters=3001@ip-10-0-1-240.eu-central-1.compute.internal:9093,3002@ip-10-0-2-70.eu-central-1.compute.internal:9093,3003@ip-10-0-3-250.eu-central-1.compute.internal:9093
+group.initial.rebalance.delay.ms=3000
+inter.broker.listener.name=INTERNAL
+kafka.rest.auth.ssl.principal.mapping.rules=DEFAULT
+kafka.rest.bootstrap.servers=ip-10-0-1-7.eu-central-1.compute.internal:9092,ip-10-0-1-244.eu-central-1.compute.internal:9092,ip-10-0-2-185.eu-central-1.compute.internal:9092,ip-10-0-2-91.eu-central-1.compute.internal:9092
+kafka.rest.client.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret-password";
+kafka.rest.client.sasl.mechanism=SCRAM-SHA-512
+kafka.rest.client.security.protocol=SASL_SSL
+kafka.rest.client.ssl.truststore.location=/var/ssl/private/kafka_broker.truststore.jks
+kafka.rest.client.ssl.truststore.password=<password>
+kafka.rest.enable=true
+listener.name.broker.sasl.enabled.mechanisms=SCRAM-SHA-512
+listener.name.broker.scram-sha-512.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret-password";
+listener.name.broker.ssl.client.auth=none
+listener.name.broker.ssl.key.password=<password>
+listener.name.broker.ssl.keystore.location=/var/ssl/private/kafka_broker.keystore.jks
+listener.name.broker.ssl.keystore.password=<password>
+listener.name.broker.ssl.principal.mapping.rules=DEFAULT
+listener.name.broker.ssl.truststore.location=/var/ssl/private/kafka_broker.truststore.jks
+listener.name.broker.ssl.truststore.password=<password>
+listener.name.controller.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret-password"  user_admin="admin-secret-password" user_client="client-secret" user_kafka_connect="kafka_connect-secret";
+authorizer.class.name=org.apache.kafka.metadata.authorizer.StandardAuthorizer
+super.users=User:admin
+listener.name.controller.sasl.enabled.mechanisms=PLAIN,SCRAM-SHA-512
+listener.name.controller.scram-sha-512.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret-password";
+listener.name.controller.ssl.client.auth=none
+listener.name.controller.ssl.key.password=<password>
+listener.name.controller.ssl.keystore.location=/var/ssl/private/kafka_broker.keystore.jks
+listener.name.controller.ssl.keystore.password=<password>
+listener.name.controller.ssl.principal.mapping.rules=DEFAULT
+listener.name.controller.ssl.truststore.location=/var/ssl/private/kafka_broker.truststore.jks
+listener.name.controller.ssl.truststore.password=<password>
+listener.name.internal.sasl.enabled.mechanisms=SCRAM-SHA-512
+listener.name.internal.scram-sha-512.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret-password";
+listener.name.internal.ssl.client.auth=none
+listener.name.internal.ssl.key.password=<password>
+listener.name.internal.ssl.keystore.location=/var/ssl/private/kafka_broker.keystore.jks
+listener.name.internal.ssl.keystore.password=<password>
+listener.name.internal.ssl.principal.mapping.rules=DEFAULT
+listener.name.internal.ssl.truststore.location=/var/ssl/private/kafka_broker.truststore.jks
+listener.name.internal.ssl.truststore.password=<password>
+listener.security.protocol.map=CONTROLLER:SASL_SSL,INTERNAL:SASL_SSL,BROKER:SASL_SSL
+listeners=INTERNAL://:9092,BROKER://:9091
+log.dirs=/var/lib/kafka/data
+log.retention.check.interval.ms=300000
+log.retention.hours=168
+log.segment.bytes=1073741824
+node.id=1
+num.io.threads=16
+num.network.threads=8
+num.partitions=1
+num.recovery.threads.per.data.dir=2
+offsets.topic.replication.factor=3
+process.roles=broker
+sasl.enabled.mechanisms=SCRAM-SHA-512,PLAIN
+sasl.mechanism.controller.protocol=PLAIN
+sasl.mechanism.inter.broker.protocol=SCRAM-SHA-512
+socket.receive.buffer.bytes=102400
+socket.request.max.bytes=104857600
+socket.send.buffer.bytes=102400
+ssl.key.password=<password>
+ssl.keystore.location=/var/ssl/private/kafka_broker.keystore.jks
+ssl.keystore.password=<password>
+ssl.principal.mapping.rules=DEFAULT
+ssl.truststore.location=/var/ssl/private/kafka_broker.truststore.jks
+ssl.truststore.password=<password>
+transaction.state.log.min.isr=2
+transaction.state.log.replication.factor=3
